<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="6dp"

        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/install_icon" />

        <TextView
            android:id="@+id/nav_app_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/imageView"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            />

        <TextView
            android:id="@+id/navEmailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="acounts@sales.com"
            android:layout_toRightOf="@+id/imageView"
            android:layout_below="@id/nav_app_name_txt"
            android:textSize="12sp"
            android:textColor="@color/black_secondary_text"
            android:layout_marginLeft="8dp"
            />




    </RelativeLayout>



    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:visibility="gone"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/nav_header_subtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcNaDrawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_drawer_list" />

            <LinearLayout
                android:id="@+id/llLeadManage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivDownArrow"
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5dip"
                    android:layout_marginEnd="5dp"
                    android:padding="@dimen/_2dip"
                    android:src="@drawable/baseline_arrow_forward_ios_24" />

                <ImageView
                    android:id="@+id/ivArow"
                    android:layout_width="@dimen/_30dip"
                    android:layout_height="@dimen/_30dip"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:padding="@dimen/_4dip"
                    android:src="@drawable/leader_management_img"
                    android:tint="@color/black" />

                <TextView
                    android:id="@+id/tvLeadMange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingVertical="10dp"
                    android:text="Lead Management"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dip"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_drawer_list" />


            <LinearLayout
                android:id="@+id/llMaster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dip"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivDownArrowMaster"
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5dip"
                    android:layout_marginEnd="5dp"
                    android:padding="@dimen/_2dip"
                    android:src="@drawable/baseline_arrow_forward_ios_24" />

                <ImageView
                    android:layout_width="@dimen/_30dip"
                    android:layout_height="@dimen/_30dip"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:padding="@dimen/_4dip"
                    android:src="@drawable/master_img"
                    android:tint="@color/black" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingVertical="10dp"
                    android:text="Master"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcMaster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dip"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_drawer_list" />

            <LinearLayout
                android:id="@+id/llBeforeConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dip"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivDownArrow1"
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5dip"
                    android:layout_marginEnd="5dp"
                    android:padding="@dimen/_2dip"
                    android:src="@drawable/baseline_arrow_forward_ios_24" />

                <ImageView
                    android:layout_width="@dimen/_30dip"
                    android:layout_height="@dimen/_30dip"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:padding="@dimen/_4dip"
                    android:src="@drawable/beforeconf_img"
                    android:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingVertical="10dp"
                    android:text="Before Confirmation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcBeforeConfim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dip"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_drawer_list" />

            <LinearLayout
                android:id="@+id/llAfterConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dip"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivDownArrow2"
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5dip"
                    android:layout_marginEnd="5dp"
                    android:padding="@dimen/_2dip"
                    android:src="@drawable/baseline_arrow_forward_ios_24"/>

                <ImageView
                    android:layout_width="@dimen/_30dip"
                    android:layout_height="@dimen/_30dip"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:padding="@dimen/_4dip"
                    android:src="@drawable/afterconf_img"
                    android:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingVertical="10dp"
                    android:text="After Confirmation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />

                />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcAfterConfim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dip"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_drawer_list" />


            <LinearLayout
                android:id="@+id/llReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dip"
                android:background="@color/white"
                android:orientation="horizontal">



                <ImageView
                    android:id="@+id/ivDownArrow3"
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5dip"
                    android:layout_marginEnd="5dp"
                    android:padding="@dimen/_2dip"
                    android:src="@drawable/baseline_arrow_forward_ios_24" />

                <ImageView
                    android:layout_width="@dimen/_30dip"
                    android:layout_height="@dimen/_30dip"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:padding="@dimen/_4dip"
                    android:src="@drawable/repots_img"
                    android:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingVertical="10dp"
                    android:text="Reports"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dip"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_drawer_list" />

            <LinearLayout
                android:id="@+id/llLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:layout_marginTop="@dimen/_2dip"
                android:background="@drawable/btn_round_shape"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_4dip">

                <ImageView
                    android:layout_width="@dimen/_30dip"
                    android:layout_height="@dimen/_30dip"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10dp"
                    android:padding="@dimen/_4dip"
                    android:src="@drawable/ic_logout_24"
                    android:tint="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingVertical="10dp"
                    android:text="Logout"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


